<resources>
    <string name="app_name">News新闻</string>
    <string name="qqbutton">QQ</string>
    <string name="buttonsharetoQQ">分享到QQ</string>
    <string name="buttonsharetoQQZone">分享到空间</string>
    <string name="wxbutton">微信</string>
    <string name="buttonsharetoWX">分享到微信</string>
    <string name="buttonsharetoWXSNS">分享到朋友圈</string>
    <string name="sinabutton">SINA</string>
    <string name="buttonsharetoSina">分享到微博</string>
    <string name="title_activity_qqshare">QQShareActivity</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="sharecancel">shareToQQ onCancel</string>
    <string name="weibosdk_demo_toast_auth_success">授权成功</string>
    <string name="weibosdk_demo_toast_auth_failed">授权失败</string>
    <string name="weibosdk_demo_toast_auth_canceled">取消授权</string>
    <string name="share_url">url分享到私信</string>
    <string name="share_card">card分享到私信</string>
    <string name="buttonsharetoSinaFriend">分享到微博私信</string>
    <string name="msg_load_ing">正在加载</string>
    <string name="select_from_gallery">从图库中选取</string>
    <string name="take_photo">拍摄照片</string>
    <string name="collection">收藏</string>
    <string name="thumb_up">好评鼓励</string>
    <string name="suggest">意见反馈</string>
    <string name="set"> 设置 </string>
    <string name="daynight">模式</string>
    <string name="register_login_et_hint">请输入手机号码</string>
    <string name="register_login_btn">确定</string>
    <string name="register_login_weixin">微信</string>
    <string name="register_login_qq">QQ</string>
    <string name="register_login_sina">SINA</string>
    <string name="register_login_choose">选择第三方登录</string>
    <string name="logout">退出登录</string>
    <string name="default_name">董小姐</string>
    <string name="default_mail">xuqi19950424@gmail.com</string>
    <string name="take_picture">拍照</string>
    <string name="choose_album">图库</string>
    <string name="choose_head">头像选择</string>
    <string name="cancel">取消</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="item_clicked">item clicked !!</string>
    <string name="item_longclicked">item long clicked !!</string>
    <string name="close">关闭</string>
    <string name="pull_refresh_prompt">正在加载</string>
    <string name="guide_text">guide</string>
    <string name="guid_pager_1">新鲜</string>
    <string name="enter_main">进入主页</string>
    <string name="send_vercode">发送验证码</string>
    <string name="edit_vercode">请输入验证码</string>
    <string name="loading_dialog_text">正在加载</string>
    <string name="account_password_login">账号密码登录</string>
    <string name="title_mail">联系方式</string>
    <string name="default_phone">15110297260</string>
    <string name="edit_personal_info_hint">请点击输入</string>
    <string name="Bmob_update">Bmob更新成功</string>
    <string name="Bmob_error">Bmob错误</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="edit_personal_sex">性别</string>
    <string name="choose_sex">选择性别</string>
    <string name="edit_email">请输入邮箱</string>
    <string name="communication">联系方式</string>
    <string name="phone_number">手机号码</string>
    <string name="news_title">新闻标题</string>
    <string name="news_author">作者</string>
    <string name="news_time">发布时间</string>
    <string name="personal_suggesion_content_hint">请输入您的问题</string>
    <string name="personal_suggesion_phone_hint">请输入您的邮箱或者QQ，便于我们联系您</string>
    <string name="feedbacktitle">意见反馈</string>
    <string name="feedbackok">多谢您的反馈，我们将尽快为您解决</string>
    <string name="cancel_collection">取消收藏</string>
    <string name="collection_list">收藏夹</string>
    <string name="share">分享</string>
    <string name="history">浏览历史</string>
</resources>
