<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:paddingTop="5dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/iv_one_pic_item_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/ic_photo_camera_pink_500_48dp"/>

    <RelativeLayout
        android:layout_marginStart="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_one_pic_item_title"
            android:text="@string/news_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_one_pic_item_author"
            android:layout_marginTop="16dp"
            android:layout_below="@+id/tv_one_pic_item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news_author"/>

        <TextView
            android:id="@+id/tv_one_pic_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_one_pic_item_author"
            android:layout_toEndOf="@+id/tv_one_pic_item_author"
            android:layout_alignBaseline="@+id/tv_one_pic_item_author"
            android:layout_alignParentEnd="true"
            android:gravity="end"
            android:text="@string/news_time"/>

    </RelativeLayout>

</LinearLayout>
