<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_three_pic_title"
        android:paddingTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/news_title"
        android:textColor="@color/black"/>

    <LinearLayout
        android:paddingTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_three_pic_one"
            android:layout_width="105dp"
            android:layout_height="75dp"
            android:scaleType="centerCrop"
            android:background="@drawable/new_default"/>

        <ImageView
            android:id="@+id/iv_three_pic_two"
            android:layout_width="105dp"
            android:layout_height="75dp"
            android:layout_marginStart="5dp"
            android:scaleType="centerCrop"
            android:background="@drawable/new_default"/>

        <ImageView
            android:id="@+id/iv_three_pic_three"
            android:layout_width="105dp"
            android:layout_height="75dp"
            android:layout_marginStart="5dp"
            android:scaleType="centerCrop"
            android:background="@drawable/new_default"/>
    </LinearLayout>

    <LinearLayout
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_three_pic_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news_author"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_three_pic_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:text="@string/news_time"
            android:textColor="@color/black"/>
    </LinearLayout>
</LinearLayout>
