<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_personal_info_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.xuqi.qqdemo.view.EditPersonalInfoPageActivity">

    <android.support.v7.widget.Toolbar xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar_edit_personal_info"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        app:navigationIcon="@drawable/ic_back_24dp"
        app:title="完善信息"
        app:titleTextColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar_edit_personal_info"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="基础信息"
            android:textColor="@color/black"
            android:textSize="@dimen/base_textsize_large_16sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/tv_edit_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="昵称"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tv_edit_name"
                android:layout_toRightOf="@+id/tv_edit_name"
                android:hint="@string/edit_personal_info_hint"
                android:paddingLeft="5dp"
                android:textColor="@color/gray_1"
                android:textSize="@dimen/base_textsize_smaller_12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/tv_edit_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/edit_personal_sex"
                android:textColor="@color/black" />

            <!--<EditText-->
                <!--android:id="@+id/et_sex"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:hint="@string/edit_personal_info_hint"-->
                <!--android:layout_toRightOf="@+id/tv_edit_sex"-->
                <!--android:paddingStart="5dp"-->
                <!--android:paddingEnd="5dp"-->
                <!--android:layout_alignBaseline="@+id/tv_edit_sex"-->
                <!--android:textColor="@color/gray_1"-->
                <!--android:textSize="@dimen/base_textsize_smaller_12sp" />-->
            <TextView
                android:id="@+id/et_sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_personal_info_hint"
                android:layout_toRightOf="@+id/tv_edit_sex"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:layout_alignBaseline="@+id/tv_edit_sex"
                android:textColor="@color/gray_1"
                android:textSize="@dimen/base_textsize_smaller_12sp" />
        </RelativeLayout>

        <View
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider_all_color"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/communication"
            android:textColor="@color/black"
            android:textSize="@dimen/base_textsize_large_16sp" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_email"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:drawablePadding="5dp"
            android:textColor="@color/gray_1"
            android:textSize="@dimen/base_textsize_smaller_12sp"
            android:inputType="textEmailAddress"/>

        <View
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider_all_color"/>
    </LinearLayout>

</RelativeLayout>
